--- a/styles/style.css
+++ b/styles/style.css
@@ -167,24 +167,16 @@ ol {
   border: 1px solid #fff;
   background-color: transparent;
   height: 34px;
-  position: relative;
+  margin: 3px;
 }
 
 .button:focus {
   outline: none;
 }
 
-.button:focus-visible::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  border: solid 1px #fff;
-  height: calc(100% + 4px);
-  width: calc(100% + 4px);
-  padding-bottom: 12px;
-  z-index: 5;
+.button:focus-visible {
+  outline: double;
+  border: none;
 }
 
 .button:active {
@@ -302,11 +294,7 @@ ol {
 }
 
 .more-button {
-  width: 100%;
-}
-
-li:has(.more-button) {
-  padding: 2px;
+  width: calc(100% - 6px);
 }
 
 .visually-hidden {
