--- a/styles/style.css
+++ b/styles/style.css
@@ -42,10 +42,9 @@ ol {
 
 /* ---------------------------------------------- */
 .content {
-  block-size: 537px;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   gap: 30px;
   inline-size: inherit;
@@ -83,7 +82,7 @@ ol {
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 3px;
   border: none;
 }
 
@@ -115,18 +114,21 @@ ol {
 
 .search-form__textfield {
   appearance: none;
-  width: 225px;
-  height: 27px;
+  min-width: 225px;
+  min-height: 27px;
   background: transparent;
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  color: rgba(255, 255, 255, 0.7);
+  color: #fff;
   font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.search-form__textfield:focus {
   outline: none;
 }
 
@@ -134,13 +136,8 @@ ol {
   outline: 1px solid #fff;
 }
 
-.search-form__label:has(:active) {
-  outline: 1px solid #fff;
-}
-
 .search-form__textfield:active {
-  border-top: none;
-  border-bottom: none;
+  border: 1px solid #fff;
 }
 
 .search-form__checkbox-list {
@@ -170,9 +167,9 @@ ol {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   background-color: transparent;
-  height: 34px;
+  min-height: 34px;
 }
 
 .button:focus {
@@ -217,12 +214,16 @@ ol {
 
 .content__list {
   block-size: 298px;
-  overflow-y: scroll;
+  overflow: auto;
   position: relative;
 }
 
-.content__list::-webkit-scrollbar {
-  display: none;
+*::-webkit-scrollbar {
+  width: 2px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #fff;
 }
 
 .content__list-item {
@@ -230,16 +231,17 @@ ol {
 }
 
 .content__list-item:not(:last-child) {
-  margin-bottom: 26px;
+  margin-bottom: 30px;
 }
 
 .content__card-link {
   text-decoration: none;
   color: #fff;
   display: block;
+  margin: 2px;
 }
 
-.content__card-link:active {
+.content__card-link_current {
   background-color: #545050;
 }
 
@@ -247,7 +249,7 @@ ol {
   outline: none;
 }
 
-.content__card-link:focus-visible .content__video-card {
+.content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
 
@@ -259,29 +261,32 @@ ol {
 }
 
 .content__video-card-description-container {
-  padding-top: 4px;
-  padding-left: 2px;
+  padding-top: 2px;
+  gap: 6px;
   display: flex;
   flex-direction: column;
 }
 
-.content__video-card-description-container * {
-  display: inline-block;
+.content__video-card-description-container :is(h2, p) {
   width: fit-content;
 }
 
 .content__card-link:hover :is(h2, p) {
-  border-bottom: 1px solid #fff;
+  text-decoration: underline;
+  text-underline-offset: 1px;
 }
 
 .content__video-card-title {
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: 100%; /* 30px */
   text-transform: uppercase;
-  margin-bottom: 6px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 200px;
 }
 
 .content__video-card-description {
@@ -290,12 +295,17 @@ ol {
   font-style: normal;
   font-weight: 400;
   line-height: 90%; /* 16.2px */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 200px;
+  max-height: 65px;
 }
 
 .content__video-card-thumbnail {
   inline-size: 194px;
   block-size: 103px;
   object-fit: cover;
+  object-position: center;
 }
 
 .more-button {
